# testscript-eval-py

./: .env.aidbox  .env.sdc  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  compose.yaml  docker-compose.tests.yaml  env_tests  main.py  pyproject.toml
.github/workflows/: main.yaml  publish.yaml
tests/: conftest.py  test_main.py
tests/TestScript/: testscript-vitals-questionnaire.yaml
tests/data/: testscript-allergies-questionnaire-populate.json  testscript-allergies-questionnaire-populate.yaml  testscript-example-history.json  testscript-example-multisystem.json  testscript-example-readtest.json  testscript-example-search.json  testscript-example-search.yaml  testscript-example-update.json  testscript-example-update.yaml  testscript-example.json  testscript-vitals-questionnaire-populate.json  testscript-vitals-questionnaire.yaml
tests/resources/: allergies-questionnaire.json  patient.json  patient.yaml  vitals-extract-request-body.yaml  vitals-questionnaire-response.yaml
testscript/: __init__.py  assertation.py  eval.py  misc.py  operations.py
testscript_eval/: __init__.py  assertation.py  eval.py  operations.py  pytest_plugin.py
zrc/: box.edn
