[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
(
  /(
    | \.git
    | \.pytest_cache
    | htmlcov
    | locales
    | resources
    | requirements
    | embed
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 100
default_section = "THIRDPARTY"
known_first_party = ["testscript"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --color=yes --disable-warnings"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"

[tool.poetry]
exclude = ["zrc"]
